# why3-ptree-rust

./: Cargo.toml  README.md
.github/workflows/: doc.yml
src/: core.rs  lib.rs  mlw.rs  parser.rs  util.rs
src/core/: decl.rs  dterm.rs  ident.rs
src/mlw/: expr.rs  ity.rs  pmodule.rs
src/parser/: mlw_printer.rs  ptree.rs  ptree_helpers.rs
src/util/: big_int.rs  constant.rs  debug.rs  lists.rs  loc.rs  number.rs  pp.rs
tests/: simple_printing.rs
